<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>be.personify.iam</groupId>
    <artifactId>personify-scim-server</artifactId>
    <version>1.2.4.RELEASE</version>
    <packaging>jar</packaging>

    <name>personify-scim-server</name>
    <description>reference implementation for the scim v2 protocol</description>

    <url>https://www.personify.be</url>

    <inceptionYear>2019</inceptionYear>

    <organization>
        <name>personify</name>
        <url>https://www.personify.be</url>
    </organization>
    <licenses>
        <license>
            <name>MIT</name>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Wouter Van der Beken</name>
            <email>wouter@mogo.be</email>
        </developer>
        <developer>
            <name>Steve Jerman</name>
            <email>steve.jerman@cloudspot.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:ssh://git@bitbucket.org:wouter29/personify-scim-server.git</connection>
        <url>https://bitbucket.org/wouter29/?visibility=public</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <mysql-connector.version>8.0.26</mysql-connector.version>
        <personify.provisioning.version>1.2.4.RELEASE</personify.provisioning.version>
        <postgress.version>9.1-901-1.jdbc4</postgress.version>
        <spring-boot-starter-version>2.5.4</spring-boot-starter-version>
        <couchbase.version>3.0.2</couchbase.version>
        <orientdb.version>3.1.2</orientdb.version>
        <mongo.version>3.12.7</mongo.version>
        
    </properties>


    <dependencies>

        <dependency>
            <groupId>be.personify.iam</groupId>
            <artifactId>personify-provisioning</artifactId>
            <version>${personify.provisioning.version}</version>
        </dependency>

        <dependency>
            <groupId>com.couchbase.client</groupId>
            <artifactId>java-client</artifactId>
            <version>${couchbase.version}</version>
        </dependency>

        <dependency>
            <groupId>com.orientechnologies</groupId>
            <artifactId>orientdb-core</artifactId>
            <version>${orientdb.version}</version>
        </dependency>

	
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql-connector.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>${mongo.version}</version>
        </dependency>
        

        <dependency>
            <groupId>postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgress.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot-starter-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

<!--             <plugin> -->
<!--                 <groupId>com.spotify</groupId> -->
<!--                 <artifactId>dockerfile-maven-plugin</artifactId> -->
<!--                 <version>1.4.13</version> -->
<!--                 <executions> -->
<!--                     <execution> -->
<!--                         <id>default</id> -->
<!--                         <goals> -->
<!--                             <goal>build</goal> -->
<!--                             <goal>push</goal> -->
<!--                         </goals> -->
<!--                     </execution> -->
<!--                 </executions> -->
<!--                 <configuration> -->
<!--                     <repository>personify/${project.artifactId}</repository> -->
<!--                     <tag>${project.version}</tag> -->
<!--                     <buildArgs> -->
<!--                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE> -->
<!--                     </buildArgs> -->
<!--                 </configuration> -->
<!--             </plugin> -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

          

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>8</source>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.7</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

<!--             <plugin> -->
<!--                 <groupId>org.springframework.boot</groupId> -->
<!--                 <artifactId>spring-boot-maven-plugin</artifactId> -->
<!--                 <version>${spring-boot-starter-version}</version> -->
<!--                 <executions> -->
<!--                     <execution> -->
<!--                         <goals> -->
<!--                             <goal>repackage</goal> -->
<!--                         </goals> -->
<!--                     </execution> -->
<!--                 </executions> -->
<!--             </plugin> -->

        </plugins>
    </build>

</project>
